[gd_scene load_steps=8 format=3 uid="uid://building_base_001"]

[ext_resource type="Script" path="res://src/entities/building/building.gd" id="1_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_top"]
size = Vector2(320, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_side"]
size = Vector2(20, 260)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_bottom_left"]
size = Vector2(110, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wall_bottom_right"]
size = Vector2(110, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door_collision"]
size = Vector2(80, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_door_area"]
size = Vector2(120, 120)

[node name="Building" type="StaticBody2D" groups=["Building"]]
script = ExtResource("1_script")

[node name="Floor" type="ColorRect" parent="."]
z_index = -1
offset_left = -140.0
offset_top = -110.0
offset_right = 140.0
offset_bottom = 110.0
mouse_filter = 2
color = Color(0.28, 0.22, 0.18, 1)

[node name="WallTop" type="ColorRect" parent="."]
offset_left = -160.0
offset_top = -130.0
offset_right = 160.0
offset_bottom = -110.0
mouse_filter = 2
color = Color(0.545098, 0.396078, 0.294118, 1)

[node name="WallLeft" type="ColorRect" parent="."]
offset_left = -160.0
offset_top = -130.0
offset_right = -140.0
offset_bottom = 130.0
mouse_filter = 2
color = Color(0.545098, 0.396078, 0.294118, 1)

[node name="WallRight" type="ColorRect" parent="."]
offset_left = 140.0
offset_top = -130.0
offset_right = 160.0
offset_bottom = 130.0
mouse_filter = 2
color = Color(0.545098, 0.396078, 0.294118, 1)

[node name="WallBottomLeft" type="ColorRect" parent="."]
offset_left = -160.0
offset_top = 110.0
offset_right = -40.0
offset_bottom = 130.0
mouse_filter = 2
color = Color(0.545098, 0.396078, 0.294118, 1)

[node name="WallBottomRight" type="ColorRect" parent="."]
offset_left = 40.0
offset_top = 110.0
offset_right = 160.0
offset_bottom = 130.0
mouse_filter = 2
color = Color(0.545098, 0.396078, 0.294118, 1)

[node name="CollisionTop" type="CollisionShape2D" parent="."]
position = Vector2(0, -120)
shape = SubResource("RectangleShape2D_wall_top")

[node name="CollisionLeft" type="CollisionShape2D" parent="."]
position = Vector2(-150, 0)
shape = SubResource("RectangleShape2D_wall_side")

[node name="CollisionRight" type="CollisionShape2D" parent="."]
position = Vector2(150, 0)
shape = SubResource("RectangleShape2D_wall_side")

[node name="CollisionBottomLeft" type="CollisionShape2D" parent="."]
position = Vector2(-95, 120)
shape = SubResource("RectangleShape2D_wall_bottom_left")

[node name="CollisionBottomRight" type="CollisionShape2D" parent="."]
position = Vector2(95, 120)
shape = SubResource("RectangleShape2D_wall_bottom_right")

[node name="DoorCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 120)
shape = SubResource("RectangleShape2D_door_collision")

[node name="DoorSprite" type="ColorRect" parent="."]
offset_left = -40.0
offset_top = 110.0
offset_right = 40.0
offset_bottom = 130.0
color = Color(0.4, 0.25, 0.1, 1)

[node name="DoorArea" type="Area2D" parent="."]
position = Vector2(0, 120)

[node name="DoorAreaCollision" type="CollisionShape2D" parent="DoorArea"]
shape = SubResource("RectangleShape2D_door_area")

[node name="Label" type="Label" parent="."]
offset_left = -160.0
offset_top = -170.0
offset_right = 160.0
offset_bottom = -135.0
theme_override_font_sizes/font_size = 24
text = "Building"
horizontal_alignment = 1
